[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "promptcanary"
version = "0.2.3"
description = "Detect silent behavioral drift in LLM providers and custom models — before it breaks production."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "PromptCanary Contributors" }
]
keywords = [
    "llm", "behavioral-testing", "drift-detection", "openai", "anthropic",
    "ai-testing", "mlops", "canary", "evaluation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.2",
    "click>=8.1.0",
]

[project.optional-dependencies]
viz = [
    "plotly>=5.18.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
    "types-python-dateutil",
    "types-PyYAML",
]
all = [
    "promptcanary[viz,dev]",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-exclude>=1.0.2",
]

[project.scripts]
promptcanary = "promptcanary.cli:app"

[project.urls]
Homepage = "https://github.com/Mattral/PromptCanary"
Documentation = "https://mattral.github.io/PromptCanary/"
Repository = "https://github.com/Mattral/PromptCanary"
"Bug Tracker" = "https://github.com/Mattral/PromptCanary/issues"
Changelog = "https://github.com/Mattral/PromptCanary/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["promptcanary"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["promptcanary", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "PTH",      # flake8-use-pathlib
    "RUF",      # ruff-specific
]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["promptcanary"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=promptcanary",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["promptcanary"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
